--- a/app/src/main/res/drawable/feature_card_bg.xml
+++ b/app/src/main/res/drawable/feature_card_bg.xml
@@ -1,11 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-
-    <gradient
-        android:angle="45"
-        android:startColor="#1E3C72"
-    android:endColor="#444b57"
-    android:type="linear" />
+    <solid android:color="@color/t"/>
+    <corners android:radius="7dp"/>
 </shape>
-
