--- a/app/src/main/res/drawable/ic_account_circle.xml
+++ b/app/src/main/res/drawable/ic_account_circle.xml
@@ -1,10 +1,56 @@
-<?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
     android:height="24dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
-    <path
-        android:fillColor="@android:color/white"
-        android:pathData="M12,2A10,10 0,0 0,2 12a10,10 0,0 0,10 10a10,10 0,0 0,10 -10A10,10 0,0 0,12 2zm0,3a3,3 0,1 1,0 6a3,3 0,0 1,0 -6zm0,14.2c-2.5,0 -4.7,1.2 -6,3.2c0,-2.3 2,-4.2 4.5,-4.2c0.5,0 1,0 1.5,0.1c1.5,-1.3 3.5,-2.1 5.6,-2.1c2.2,0 4.2,0.8 5.7,2.1c-1.3,-2 -3.5,-3.2 -6,-3.2z" />
+    android:viewportWidth="28.8"
+    android:viewportHeight="28.8">
+  <path
+      android:pathData="M14.521,15.18C14.451,15.17 14.361,15.17 14.281,15.18C12.521,15.12 11.121,13.68 11.121,11.91C11.121,10.1 12.581,8.63 14.401,8.63C16.211,8.63 17.681,10.1 17.681,11.91C17.671,13.68 16.281,15.12 14.521,15.18Z"
+      android:strokeAlpha="0.4"
+      android:strokeLineJoin="round"
+      android:strokeWidth="1.5"
+      android:fillColor="#00000000"
+      android:strokeColor="#000000"
+      android:fillAlpha="0.4"
+      android:strokeLineCap="round"/>
+  <path
+      android:pathData="M21.14,21.78C19.36,23.41 17,24.4 14.4,24.4C11.8,24.4 9.44,23.41 7.66,21.78C7.76,20.84 8.36,19.92 9.43,19.2C12.17,17.38 16.65,17.38 19.37,19.2C20.44,19.92 21.04,20.84 21.14,21.78Z"
+      android:strokeAlpha="0.34"
+      android:strokeLineJoin="round"
+      android:strokeWidth="1.5"
+      android:fillColor="#00000000"
+      android:strokeColor="#000000"
+      android:fillAlpha="0.34"
+      android:strokeLineCap="round"/>
+  <path
+      android:pathData="M14.4,24.4C19.923,24.4 24.4,19.923 24.4,14.4C24.4,8.877 19.923,4.4 14.4,4.4C8.877,4.4 4.4,8.877 4.4,14.4C4.4,19.923 8.877,24.4 14.4,24.4Z"
+      android:strokeLineJoin="round"
+      android:strokeWidth="1.5"
+      android:fillColor="#00000000"
+      android:strokeColor="#000000"
+      android:strokeLineCap="round"/>
+  <path
+      android:pathData="M14.521,15.18C14.451,15.17 14.361,15.17 14.281,15.18C12.521,15.12 11.121,13.68 11.121,11.91C11.121,10.1 12.581,8.63 14.401,8.63C16.211,8.63 17.681,10.1 17.681,11.91C17.671,13.68 16.281,15.12 14.521,15.18Z"
+      android:strokeAlpha="0.4"
+      android:strokeLineJoin="round"
+      android:strokeWidth="1.5"
+      android:fillColor="#00000000"
+      android:strokeColor="#000000"
+      android:fillAlpha="0.4"
+      android:strokeLineCap="round"/>
+  <path
+      android:pathData="M21.14,21.78C19.36,23.41 17,24.4 14.4,24.4C11.8,24.4 9.44,23.41 7.66,21.78C7.76,20.84 8.36,19.92 9.43,19.2C12.17,17.38 16.65,17.38 19.37,19.2C20.44,19.92 21.04,20.84 21.14,21.78Z"
+      android:strokeAlpha="0.34"
+      android:strokeLineJoin="round"
+      android:strokeWidth="1.5"
+      android:fillColor="#00000000"
+      android:strokeColor="#000000"
+      android:fillAlpha="0.34"
+      android:strokeLineCap="round"/>
+  <path
+      android:pathData="M14.4,24.4C19.923,24.4 24.4,19.923 24.4,14.4C24.4,8.877 19.923,4.4 14.4,4.4C8.877,4.4 4.4,8.877 4.4,14.4C4.4,19.923 8.877,24.4 14.4,24.4Z"
+      android:strokeLineJoin="round"
+      android:strokeWidth="1.5"
+      android:fillColor="#00000000"
+      android:strokeColor="#000000"
+      android:strokeLineCap="round"/>
 </vector>
