--- a/app/src/main/res/layout/dialog_password.xml
+++ b/app/src/main/res/layout/dialog_password.xml
@@ -8,8 +8,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:background="@drawable/bg_gradient"
-        android:padding="20dp"
+        android:background="@drawable/bg_semi_transparent"
+        android:padding="0dp"
         android:layout_centerInParent="true">
 
         <ImageView
@@ -18,6 +18,7 @@
             android:layout_height="48dp"
             android:layout_gravity="center_horizontal"
             android:src="@drawable/ic_key"
+            android:layout_marginTop="20dp"
             android:contentDescription="Key Icon" />
 
         <TextView
@@ -54,6 +55,8 @@
             android:drawableEnd="@drawable/ic_visibility_off"
             android:drawablePadding="8dp"
             android:padding="10dp"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginVertical="5dp"
             android:background="@drawable/rounded_input"
             android:textColorHint="#CCCCCC"/>
 
@@ -89,17 +92,24 @@
             android:background="@drawable/rounded_outline_button"
             android:visibility="gone" />
 
+        <View
+            android:id="@+id/divider"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#4a5565"
+            android:layout_marginTop="20dp" />
+
         <Button
             android:id="@+id/btnDone"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_height="50dp"
             android:text="Verify"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="0dp"
             android:textColor="@android:color/white"
-            android:background="@drawable/rounded_button"
+            android:background="@android:color/transparent"
             android:textSize="18sp"
-            android:paddingTop="0dp"
-            android:paddingBottom="5dp" />
+            android:paddingTop="5dp"
+            android:paddingBottom="7dp" />
     </LinearLayout>
 
     <ImageView
