--- a/app/src/main/res/layout/email_not_found_dialog.xml
+++ b/app/src/main/res/layout/email_not_found_dialog.xml
@@ -4,14 +4,16 @@
     android:layout_height="match_parent"
     android:background="@android:color/background_dark">
 
+    <!-- Pop-up Card -->
     <LinearLayout
         android:id="@+id/popupCard"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:background="@drawable/bg_gradient"
-        android:padding="20dp"
-        android:layout_centerInParent="true">
+        android:background="@drawable/bg_semi_transparent"
+        android:padding="0dp"
+        android:layout_centerInParent="true"
+        android:elevation="8dp">
 
         <ImageView
             android:id="@+id/iconInfo"
@@ -19,7 +21,8 @@
             android:layout_height="48dp"
             android:layout_gravity="center_horizontal"
             android:src="@drawable/ic_not_found"
-            android:contentDescription="Information Icon" />
+            android:contentDescription="Information Icon"
+            android:layout_marginTop="20dp"/>
 
         <TextView
             android:id="@+id/tvTitle"
@@ -30,7 +33,7 @@
             android:text="User Not Found"
             android:textSize="20sp"
             android:textStyle="bold"
-            android:layout_gravity="center_horizontal" />
+            android:layout_gravity="center_horizontal"/>
 
         <TextView
             android:id="@+id/tvMessage"
@@ -41,22 +44,33 @@
             android:text="We couldn't find an account with that email. Try creating a new one."
             android:textColor="@android:color/white"
             android:textSize="18sp"
+            android:paddingHorizontal="10dp"
             android:gravity="center"
-            android:textStyle="normal" />
+            android:textStyle="normal"/>
 
+        <!-- Divider -->
+        <View
+            android:id="@+id/divider"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#4a5565"
+            android:layout_marginTop="40dp"
+            android:layout_marginBottom="0dp"/>
+
+        <!-- Create Account Button -->
         <Button
             android:id="@+id/btnCreateAccount"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_height="match_parent"
             android:text="Create New Account"
-            android:layout_marginTop="20dp"
             android:textColor="@android:color/white"
-            android:background="@drawable/rounded_button"
+            android:background="@android:color/transparent"
             android:textSize="18sp"
-            android:paddingTop="0dp"
-            android:paddingBottom="5dp" />
+            android:paddingTop="5dp"
+            android:paddingBottom="7dp"/>
     </LinearLayout>
 
+    <!-- Close button -->
     <ImageView
         android:id="@+id/btnClose"
         android:layout_width="24dp"
@@ -67,6 +81,5 @@
         android:layout_alignEnd="@id/popupCard"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
-        android:elevation="2dp" />
-
+        android:elevation="20dp"/>
 </RelativeLayout>
