--- a/app/src/main/res/layout/saved_account_item.xml
+++ b/app/src/main/res/layout/saved_account_item.xml
@@ -1,13 +1,50 @@
-<TextView
+<?xml version="1.0" encoding="utf-8"?>
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/accountEmail"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="16dp"
     android:background="@drawable/rounded_input"
-    android:textColor="@color/white"
     android:layout_marginBottom="8dp"
-    android:drawablePadding="16dp"
-    android:drawableStart="@drawable/ic_account_circle"
-    android:gravity="center_vertical"
-    android:textSize="16sp"/>
+    android:padding="8dp">
+
+    <ImageView
+        android:id="@+id/accountIcon"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:src="@drawable/ic_account_circle"
+        android:contentDescription="Profile icon"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginStart="8dp" />
+
+    <TextView
+        android:id="@+id/accountEmail"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="user@example.com"
+        android:textColor="@android:color/white"
+        android:textSize="16sp"
+        android:gravity="center_vertical"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:paddingTop="0dp"
+        android:paddingBottom="6dp"
+        app:layout_constraintStart_toEndOf="@id/accountIcon"
+        app:layout_constraintEnd_toStartOf="@id/removeIcon"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent" />
+
+    <ImageView
+        android:id="@+id/removeIcon"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:src="@drawable/ic_remove_account"
+        android:contentDescription="Remove account"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginEnd="8dp" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
