--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="primaryColor">#037ffc</color>
     <color name="gray">#3d4654</color>
+    <color name="t">#c2e3ff</color>
 </resources>
