--- a/app/src/main/res/layout/dialog_password.xml
+++ b/app/src/main/res/layout/dialog_password.xml
@@ -41,6 +41,7 @@
             android:text="User"
             android:textColor="@android:color/white"
             android:textSize="18sp"
+            android:layout_marginVertical="10dp"
             android:textStyle="italic" />
 
         <!-- Password field with drawableEnd eye -->
