--- a/app/src/main/res/layout/onboarding_page.xml
+++ b/app/src/main/res/layout/onboarding_page.xml
@@ -80,7 +80,7 @@
         app:layout_constraintBottom_toTopOf="@id/btnContinue"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="24dp"
+        android:layout_marginVertical="10dp"
         android:visibility="gone">
 
         <TextView
@@ -90,7 +90,7 @@
             android:textColor="@android:color/white"
             android:textSize="16sp"
             android:textStyle="bold"
-            android:layout_marginBottom="12dp"/>
+            android:layout_marginBottom="8dp"/>
 
         <ScrollView
             android:layout_width="match_parent"
