--- a/app/src/main/res/layout/email_not_found_dialog.xml
+++ b/app/src/main/res/layout/email_not_found_dialog.xml
@@ -1,85 +1,89 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/background_dark">
+    android:background="@android:color/background_dark"
+    android:clickable="true"
+    android:focusable="true">
 
-    <!-- Pop-up Card -->
-    <LinearLayout
+    <com.google.android.material.card.MaterialCardView
         android:id="@+id/popupCard"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:background="@drawable/bg_semi_transparent"
-        android:padding="0dp"
-        android:layout_centerInParent="true"
-        android:elevation="8dp">
+        android:layout_gravity="center"
+        app:cardCornerRadius="7dp"
+        app:cardElevation="8dp">
 
-        <ImageView
-            android:id="@+id/iconInfo"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:layout_gravity="center_horizontal"
-            android:src="@drawable/ic_not_found"
-            android:contentDescription="Information Icon"
-            android:layout_marginTop="20dp"/>
-
-        <TextView
-            android:id="@+id/tvTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
-            android:textColor="@android:color/white"
-            android:text="User Not Found"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            android:layout_gravity="center_horizontal"/>
-
-        <TextView
-            android:id="@+id/tvMessage"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="16dp"
-            android:text="We couldn't find an account with that email. Try creating a new one."
-            android:textColor="@android:color/white"
-            android:textSize="18sp"
-            android:paddingHorizontal="10dp"
-            android:gravity="center"
-            android:textStyle="normal"/>
-
-        <!-- Divider -->
-        <View
-            android:id="@+id/divider"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="#4a5565"
-            android:layout_marginTop="40dp"
-            android:layout_marginBottom="0dp"/>
+            android:layout_height="wrap_content"
+            android:background="@drawable/bg_gradient"
+            android:orientation="vertical">
 
-        <!-- Create Account Button -->
-        <Button
-            android:id="@+id/btnCreateAccount"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="Create New Account"
-            android:textColor="@android:color/white"
-            android:background="@android:color/transparent"
-            android:textSize="18sp"
-            android:paddingTop="5dp"
-            android:paddingBottom="7dp"/>
-    </LinearLayout>
+            <ImageView
+                android:id="@+id/btnClose"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:layout_gravity="end"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:contentDescription="Close"
+                android:src="@drawable/ic_close"
+                app:tint="@color/white" />
 
-    <!-- Close button -->
-    <ImageView
-        android:id="@+id/btnClose"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:src="@drawable/ic_close"
-        android:contentDescription="Close"
-        android:layout_alignTop="@id/popupCard"
-        android:layout_alignEnd="@id/popupCard"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="10dp"
-        android:elevation="20dp"/>
-</RelativeLayout>
+            <ImageView
+                android:id="@+id/iconInfo"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="8dp"
+                android:contentDescription="Information Icon"
+                android:src="@drawable/ic_not_found"
+                app:tint="@color/white" />
+
+            <TextView
+                android:id="@+id/tvTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="16dp"
+                android:text="User Not Found"
+                android:textColor="@android:color/white"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/tvMessage"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="16dp"
+                android:text="We couldn't find an account with that email. Try creating a new one."
+                android:textColor="@android:color/white"
+                android:textSize="18sp"
+                android:paddingHorizontal="10dp"
+                android:gravity="center"
+                android:textStyle="normal" />
+
+            <View
+                android:id="@+id/divider"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#4a5565"
+                android:layout_marginTop="40dp" />
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btnCreateAccount"
+                style="@style/Widget.MaterialComponents.Button.TextButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Create New Account"
+                android:textColor="@android:color/white"
+                android:textSize="18sp" />
+
+        </LinearLayout>
+    </com.google.android.material.card.MaterialCardView>
+
+</FrameLayout>
